# crtrs

./: Cargo.toml  README.md  build.rs
crt_macros/: Cargo.toml
crt_macros/src/: header.rs  lib.rs  plugin.rs  types.rs
src/: auth.rs  io.rs  lib.rs
