[package]
name = "crtrs"
version = "0.1.0"
authors = ["jboswell"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
bench = false

[build-dependencies]
cmake = "0.1"

[dependencies]
crt_macros = { path = "./crt_macros" }

