[package]
name = "crt_macros"
version = "0.1.0"
authors = ["Justin Boswell <justin.boswell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1.0.55", features = ["full", "extra-traits"] }
quote = "^1.0.8"
libc = "^0.2.81"
proc-macro2 = "^1.0.24"
